<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_bookmark"
        android:icon="@drawable/icon_bookmark"
        android:title="@string/bookmark" />

    <item android:id="@+id/menu_save"
        android:icon="@drawable/icon_save"
        android:title="@string/save" />

    <item android:id="@+id/menu_search"
        android:icon="@drawable/icon_search"
        android:title="@string/search" />

    <item android:id="@+id/menu_share"
        android:icon="@drawable/icon_share"
        android:title="@string/share" />

    <item android:id="@+id/menu_delete"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete" />

    <item android:id="@+id/menu_preferences"
        android:icon="@drawable/icon_preferences"
        android:title="@string/preferences" />
</menu>